--- a/fmning/index.html
+++ b/fmning/index.html
@@ -13,7 +13,7 @@
 		<!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">-->
 
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.min.css">
+        <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div id="start" class="story-container story">
-                    <p class="fittext pacifico"> Ready?</p>
+                    <p class="center100text pacifico" >Ready?</p>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-2">
                 <div class="story-image-container">
-					<div align="center" style="margin-top: 100px;" data-delay="5">
+					<div align="center"  data-delay="5">
 						<img  src="img/education.png" alt="iphone" >
 					</div>
                 </div>
@@ -145,26 +145,26 @@
             </div>
             <div class="col-xs-12 col-sm-4 ">
                 <div  class="story-container story">
-                    <p class="fittext amatic iphone-title" data-margin="50">Graduated from WPI</p>
+                    <p class="center50text amatic" >Graduated from WPI</p>
 
                 </div>
 
                 <div  class="story-container story">
-                    <p class="fittext amatic " data-margin="50" >GPA 4.0/4.0</p>
+                    <p class="center50text amatic " >GPA 4.0/4.0</p>
                 </div>
 
                 <div  class="story-container story">
-                    <p class="fittext amatic " data-margin="50" >Double major CS/EE</p>
+                    <p class="center50text amatic " >Double major CS/EE</p>
                 </div>
 
                 <div  class="story-container story">
-                    <p class="fittext amatic " data-margin="50" >Finished in 3 years</p>
+                    <p class="center50text amatic " >Finished in 3 years</p>
                 </div>
                 <div  class="story-container story">
-                    <p class="fittext amatic " data-margin="50">Selected in all dean list</p>
+                    <p class="center50text amatic " >Selected in all dean list</p>
                 </div>
                 <div  class="story-container story">
-                    <p class="fittext amatic " data-margin="50" >Several publications</p>
+                    <p class="center50text amatic " >Several publications</p>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic "> -- </p>
+                    <p class="center50text amatic "> -- </p>
                 </div>
             </div>
         </div>
@@ -180,7 +180,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div id="s4" class="story-container story">
-                    <p class="fittext amatic uppercase">Only</p>
+                    <p class="center75text amatic uppercase">Only</p>
                 </div>
             </div>
         </div>
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div id="s5" class="story-container">
-                    <p class="fittext amatic uppercase">the first line</p>
+                    <p class="center75text amatic uppercase">the first line</p>
                 </div>
             </div>
         </div>
@@ -196,14 +196,14 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div class="story-container story">
-                    <p class=" fittext amatic uppercase">is true</p>
+                    <p class="center75text amatic uppercase">is true</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div class="story-container story">
-                    <p class=" fittext amatic "> :)</p>
+                    <p class="center75text amatic "> :)</p>
                 </div>
             </div>
         </div>
@@ -221,7 +221,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext pacifico" >Mastered skills</p>
+                    <p class="center50text pacifico" >Mastered skills</p>
                 </div>
             </div>
         </div>
@@ -263,7 +263,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="1" >Eating</p>
+                    <p class="center50text amatic" data-delay="1" >Eating</p>
                 </div>
             </div>
         </div>
@@ -311,7 +311,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic">Sightseeing</p>
+                    <p class="center50text amatic">Sightseeing</p>
                 </div>
             </div>
         </div>
@@ -345,7 +345,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic">Sports</p>
+                    <p class="center50text amatic">Sports</p>
                 </div>
             </div>
         </div>
@@ -362,7 +362,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
 				<div  class="story-container story">
-                    <p class="fittext amatic ">And of course</p>
+                    <p class="center50text amatic ">And of course</p>
                 </div>
 		    </div>
         </div>
@@ -377,84 +377,84 @@
         </div>
 		
         <div class="row">
-            <div class="col-xs-1 col-sm-1">
+            <div class="col-xs-3 col-sm-1">
                 <div class="story-image-container">
                     <div class="circle-icon" data-delay="1">
                         <img src="img/java.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="2">
                         <img src="img/swift.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="3">
                         <img src="img/csharp.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="4">
                         <img src="img/javascript.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="5">
                         <img src="img/query.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="6">
                         <img src="img/asp.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="7">
                         <img src="img/html.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="8">
                         <img src="img/objective-c.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="9">
                         <img src="img/android.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="10">
                         <img src="img/python.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="11">
                         <img src="img/ruby.png">
                     </div>
                 </div>
             </div>
-			<div class="col-xs-1 col-sm-1 ">
+			<div class="col-xs-3 col-sm-1 ">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="12">
                         <img src="img/verilog.png">
@@ -466,7 +466,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div  class="story-container story">
-                    <p class="fittext amatic ">Programming languages</p>
+                    <p class="center75text amatic ">Programming languages</p>
                 </div>
 		    </div>
         </div>
@@ -493,7 +493,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext pacifico" >Timeline</p>
+                    <p class="center75text pacifico" >Timeline</p>
                 </div>
             </div>
         </div>
@@ -503,7 +503,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic "> -- </p>
+                    <p class="center50text amatic "> -- </p>
                 </div>
             </div>
         </div>
@@ -538,7 +538,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-5 col-sm-offset-1">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="1">Born, inter 1994</p>
+                    <p class="center50text amatic" data-delay="1">Born, inter 1994</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 col-sm-pull-1">
@@ -572,7 +572,7 @@
             </div>
 			<div class="col-xs-12 col-sm-5 col-sm-pull-1">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="1">Came to U.S., 2012</p>
+                    <p class="center50text amatic" data-delay="1">Came to U.S., 2012</p>
                 </div>
             </div>
         </div>
@@ -589,7 +589,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-5 col-sm-offset-1">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="1">Engineer <span style="font-size:17px;">(Trust me!)</span>, present</p>
+                    <p class="center50text amatic" data-delay="1">Engineer <span style="font-size:17px;">(Trust me!)</span>, present</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 col-sm-pull-1">
@@ -641,7 +641,7 @@
             </div>
 			<div class="col-xs-12 col-sm-5 col-sm-pull-1">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="1">Rule the world <span style="font-size:17px;">Shhhhh Planning</span></p>
+                    <p class="center50text amatic" data-delay="1">Rule the world <span style="font-size:17px;">Shhhhh Planning</span></p>
                 </div>
             </div>
         </div>
@@ -710,7 +710,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-2">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="5">King of</p>
+                    <p class="center50text amatic" data-delay="5">King of</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 col-sm-pull-1">
@@ -722,7 +722,7 @@
             </div>
 			<div class="col-xs-12 col-sm-4 col-sm-pull-2">
                 <div  class="story-container story">
-                    <p class="fittext amatic" data-delay="10">The universe</p>
+                    <p class="center50text amatic" data-delay="10">The universe</p>
                 </div>
             </div>
         </div>
@@ -777,7 +777,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext pacifico" >Soulmates</p>
+                    <p class="center75text pacifico" >Soulmates</p>
                 </div>
             </div>
         </div>
@@ -786,7 +786,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic "> -- </p>
+                    <p class="center50text amatic "> -- </p>
                 </div>
             </div>
         </div>
@@ -794,7 +794,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-3 ">
                 <div  class="story-container story">
-                    <p class="fittext amatic ">My desktop</p>
+                    <p class="center50text amatic ">My desktop</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 ">
@@ -809,7 +809,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-3 ">
                 <div  class="story-container story">
-                    <p class="fittext amatic ">My laptop</p>
+                    <p class="center50text amatic ">My laptop</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 ">
@@ -824,7 +824,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-3 ">
                 <div  class="story-container story">
-                    <p class="fittext amatic ">My server machine</p>
+                    <p class="center50text amatic ">My server machine</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 ">
@@ -839,7 +839,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-4 col-sm-offset-3 ">
                 <div  class="story-container story">
-                    <p class="fittext amatic ">My fidget spinner</p>
+                    <p class="center50text amatic ">My fidget spinner</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-2 ">
@@ -862,7 +862,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div id="s5" class="story-container">
-                    <p class="fittext amatic uppercase">And of course</p>
+                    <p class="center50text amatic uppercase">And of course</p>
                 </div>
             </div>
         </div>
@@ -870,7 +870,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div id="s5" class="story-container">
-                    <p class="fittext amatic uppercase">Her</p>
+                    <p class="center75text amatic uppercase">Her</p>
                 </div>
             </div>
         </div>
@@ -988,7 +988,7 @@
 		<div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext pacifico" >Links</p>
+                    <p class="center75text pacifico" >Links</p>
                 </div>
             </div>
         </div>
@@ -998,7 +998,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div  class="story-container story">
-                    <p class="fittext amatic "> -- </p>
+                    <p class="center50text amatic "> -- </p>
                 </div>
             </div>
         </div>
@@ -1016,7 +1016,7 @@
         <div class="row">
                 <div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-2">
 					<div  class="story-container story">
-						<p class="fittext amatic " data-margin="50" >Projects</p>
+						<p class="center50text amatic " data-margin="50" >Projects</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
@@ -1026,7 +1026,7 @@
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
 					<div  class="story-container story">
-						<p class="fittext amatic " data-margin="50">Releases</p>
+						<p class="center50text amatic " data-margin="50">Releases</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
@@ -1036,7 +1036,7 @@
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <div  class="story-container story">
-						<p class="fittext amatic " data-margin="50" >Ideas</p>
+						<p class="center50text amatic " data-margin="50" >Ideas</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
@@ -1046,7 +1046,7 @@
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
 					<div  class="story-container story">
-						<p class="fittext amatic " data-margin="50" >Galleries</p>
+						<p class="center50text amatic " data-margin="50" >Galleries</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
