--- a/fmning/index.html
+++ b/fmning/index.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="img/site.ico" type="image/x-icon" />
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-		<!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">-->
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -49,7 +49,7 @@
         <section id="story-icons">
             <div class="row">
                 <div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-2">
-                    <a href="story/" ><img src="img/project.png" class="story-icon-1"></a>
+                    <a href="story/" ><img src="img/project.png" ></a>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <a href="app-release/"><img src="img/release.png" class="story-icon-2"></a>
@@ -61,7 +61,7 @@
                     <a href="story/"><img src="img/gallery.png" class="story-icon-4"></a>
                 </div>
 
-                 <span class="keep-scrolling hidden-xs"><i class="entypo-down-open-big "></i></span>
+                 <span class="keep-scrolling hidden-xs"><i class="icon-angle-down"></i></span>
    
             </div>
         </section>
