Move cyan page under main site. Added blank pages

--- a/fmning/index.html
+++ b/fmning/index.html
@@ -49,16 +49,16 @@
         <section id="story-icons">
             <div class="row">
                 <div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-2">
-                    <a href="story/" ><img src="img/project.png" ></a>
+                    <a href="notImplemented/" target="_blank"><img src="img/project.png" ></a>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <a href="app-release/"><img src="img/release.png" class="story-icon-2"></a>
+                    <a href="notImplemented/" target="_blank"><img src="img/idea.png" class="story-icon-2"></a>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <a href="app-release/"><img src="img/idea.png" class="story-icon-3"></a>
+                    <a href="notImplemented/" target="_blank"><img src="img/gallery.png" class="story-icon-3"></a>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
-                    <a href="story/"><img src="img/gallery.png" class="story-icon-4"></a>
+                    <a href="cyan/" target="_blank"><img src="img/her.png" class="story-icon-4"></a>
                 </div>
 
                  <span class="keep-scrolling hidden-xs"><i class="icon-angle-down"></i></span>
@@ -934,7 +934,7 @@
             <div class="col-xs-12 col-sm-2">
                 <div class="story-image-container">
                     <div class="circle-icon " data-delay="0">
-                        <img src="img/her.png">
+                        <a href="cyan/" target="_blank"><img src="img/her.png"></a>
                     </div>
                 </div>
             </div>
@@ -1020,37 +1020,37 @@
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
-							<a href="story/"><img src="img/project.png"></a>
+							<a href="notImplemented/" target="_blank"><img src="img/project.png"></a>
 						</div>
 					</div>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
 					<div  class="story-container story">
-						<p class="center50text amatic " data-margin="50">Releases</p>
+						<p class="center50text amatic " data-margin="50">Ideas</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
-							<a href="story/"><img src="img/release.png"></a>
+							<a href="notImplemented/" target="_blank"><img src="img/idea.png"></a>
 						</div>
 					</div>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
                     <div  class="story-container story">
-						<p class="center50text amatic " data-margin="50" >Ideas</p>
+						<p class="center50text amatic " data-margin="50" >Galleries</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
-							<a href="story/"><img src="img/idea.png"></a>
+							<a href="notImplemented/" target="_blank"><img src="img/gallery.png"></a>
 						</div>
 					</div>
                 </div>
                 <div class="col-xs-6 col-sm-3 col-md-2">
 					<div  class="story-container story">
-						<p class="center50text amatic " data-margin="50" >Galleries</p>
+						<p class="center50text amatic " data-margin="50" >Special</p>
 					</div>
 					<div class="story-image-container">
 						<div class="circle-icon " data-delay="0">
-							<a href="story/"><img src="img/gallery.png"></a>
+							<a href="cyan/" target="_blank"><img src="img/her.png"></a>
 						</div>
 					</div>
                 </div>
