--- a/fmning/index.html
+++ b/fmning/index.html
@@ -26,10 +26,10 @@
                     <h1 class="amatic animated fadeIn"> Hi there, I am Fangming </h1>
                 </div>
                 <div class="social">
-                    <a href="#"><span class="social-item"><i class="icon-facebook"></i></span></a>
-                    <a href="#"><span class="social-item"><i class="icon-linkedin"></i></span></a>
-                    <a href="#"><span class="social-item"><i class="icon-github"></i></span></a>
-                    <a href="#"><span class="social-item"><i class="icon-stackexchange"></i></span></a>
+                    <a href="https://www.facebook.com/fangming.ning" target="_blank" ><span class="social-item"><i class="icon-facebook"></i></span></a>
+                    <a href="https://www.linkedin.com/in/fangming-ning-5499b6b2/" target="_blank" ><span class="social-item"><i class="icon-linkedin"></i></span></a>
+                    <a href="https://github.com/DerekFangming" target="_blank" ><span class="social-item"><i class="icon-github"></i></span></a>
+                    <a href="https://stackoverflow.com/users/5838902/fangming-ning" target="_blank" ><span class="social-item"><i class="icon-stackexchange"></i></span></a>
                 </div>
             </div>
             </div>
