--- a/fmning/notImplemented/index.html
+++ b/fmning/notImplemented/index.html
@@ -6,8 +6,11 @@
         <title>_(:3」 ∠)_</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        
+        <link rel="shortcut icon" href="../img/site.ico" type="image/x-icon" />
+        
     </head>
     <body>
-        _(:3」 ∠)_ This site is not implemented yet
+        _(:3」 ∠)_ This page is not implemented yet
     </body>
 </html>
