Adding gallery page

--- a/fmning/index.html
+++ b/fmning/index.html
@@ -34,7 +34,7 @@
 			<section id="sub-title">
 				<div class="row">
 					<div class="col-xs-12 col-sm-10 col-sm-offset-1">
-						<p class="sub-title"> I'm a software engineer, who solve problems that you did not know that you had, using methods you do not understand. I'm also an organism that converts caffeine and pizza into software, usually late at night.
+						<p class="sub-title"> I'm a software engineer, who solve problems that you did not know that you had, using methods you do not understand.
 						</p>
 					</div>
 				</div>
@@ -48,7 +48,7 @@
 						<a href="notImplemented/" target="_blank"><img src="img/idea.png" class="story-icon-2"></a>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-2">
-						<a href="notImplemented/" target="_blank"><img src="img/gallery.png" class="story-icon-3"></a>
+						<a href="gallery/" target="_blank"><img src="img/gallery.png" class="story-icon-3"></a>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-2">
 						<a href="cyan/" target="_blank"><img src="img/her.png" class="story-icon-4"></a>
@@ -948,7 +948,7 @@
 						</div>
 						<div class="story-image-container">
 							<div class="circle-icon " data-delay="0">
-								<a href="notImplemented/" target="_blank"><img src="img/gallery.png"></a>
+								<a href="gallery/" target="_blank"><img src="img/gallery.png"></a>
 							</div>
 						</div>
 					</div>
