Moving projNing so that it's accessable

--- a/fmning/gallery/index.html
+++ b/fmning/gallery/index.html
@@ -398,6 +398,10 @@
     </div>
 </div>
 
+<div class="container">
+    <h3 class="amatic  text-center">Copyright &#169 2018 Fangming Ning.</h3>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 <script>
     baguetteBox.run('.tz-gallery');
