--- a/fmning/index.html
+++ b/fmning/index.html
@@ -42,10 +42,10 @@
 			<section id="story-icons">
 				<div class="row">
 					<div class="col-xs-6 col-sm-3 col-md-2 col-md-offset-2">
-						<a href="notImplemented/" target="_blank"><img src="img/project.png" ></a>
+						<a href="projects/" target="_blank"><img src="img/project.png" ></a>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-2">
-						<a href="notImplemented/" target="_blank"><img src="img/idea.png" class="story-icon-2"></a>
+						<a href="ideas/" target="_blank"><img src="img/idea.png" class="story-icon-2"></a>
 					</div>
 					<div class="col-xs-6 col-sm-3 col-md-2">
 						<a href="gallery/" target="_blank"><img src="img/gallery.png" class="story-icon-3"></a>
@@ -928,7 +928,7 @@
 						</div>
 						<div class="story-image-container">
 							<div class="circle-icon " data-delay="0">
-								<a href="notImplemented/" target="_blank"><img src="img/project.png"></a>
+								<a href="projects/" target="_blank"><img src="img/project.png"></a>
 							</div>
 						</div>
 					</div>
@@ -938,7 +938,7 @@
 						</div>
 						<div class="story-image-container">
 							<div class="circle-icon " data-delay="0">
-								<a href="notImplemented/" target="_blank"><img src="img/idea.png"></a>
+								<a href="ideas/" target="_blank"><img src="img/idea.png"></a>
 							</div>
 						</div>
 					</div>
