--- a/fmning/projects/index.html
+++ b/fmning/projects/index.html
@@ -1,33 +1,26 @@
 <html>
 <head>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>_(:3」 ∠)_</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
+	<link rel="shortcut icon" href="../img/site.ico" type="image/x-icon" />
 
-
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="project.css">
 </head>
 <body>
 
 <div class="container">
-
-<header class="my-4">
-            <center><h1 class="display-3">Projects</h1></center>
-            
-            <br><br>
-            
-            <p class="lead"><big><big>WPI CSA, iOS and Android App written for Chinese Student Association of WPI</big></big></p>
-			<p class="lead">Supports a forum that can be used to host events, trade and post feeds. Integrated Braintree for ticket charging service. Presents the book Survival Guide for Chinese Students using html and SQLite.The server side uses Java Restful and Spring MVC. This app is published on both <a target="_blank" href="https://itunes.apple.com/us/app/wpi-csa/id1262827754?mt=8">App Store</a> and <a target="_blank" href="https://play.google.com/store/apps/details?id=com.fmning.wpi_csa">Google Play Store</a>. The web version of it is under construction and the half-baked site can be found <a target="_blank" href="https://wcservice.fmning.com">here</a></p>
-			
-			<br><br>
-			
-			<p class="lead"><big><big>To be continued... Even this page is half baked!</big></big></p>
-			
-        </header>
-
-
+    <p class=" amatic uppercase center75text">Projects</p>
 </div>
 
-
-<!--<a target="_blank" href="https://play.google.com\">Google Play Store</a>-->
+<div class="container">
+    <h3 class="raleway">WPI CSA, iOS and Android App written for Chinese Student Association of WPI</h3>
+    <p class="lead">Supports a forum that can be used to host events, trade and post feeds. Integrated Braintree for ticket charging service. Presents the book Survival Guide for Chinese Students using html and SQLite.The server side uses Java Restful and Spring MVC. This app is published on both <a target="_blank" href="https://itunes.apple.com/us/app/wpi-csa/id1262827754?mt=8">App Store</a> and <a target="_blank" href="https://play.google.com/store/apps/details?id=com.fmning.wpi_csa">Google Play Store</a>. The web version can be found <a target="_blank" href="https://wcservice.fmning.com">here</a></p>
+</div>
 
 
 </body>
