Adding images back

--- a/fmning/gallery/index.html
+++ b/fmning/gallery/index.html
@@ -189,6 +189,40 @@
 </div>
 
 <div class="container gallery-container">
+    <h1 class="amatic">Europe</h1>
+    <h2 class="amatic text-center">2014</h2>
+    <div class="tz-gallery">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="photos/eu1.jpg">
+                    <img src="photos/eu1.jpg">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="photos/eu2.jpg">
+                    <img src="photos/eu2.jpg">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="photos/eu3.jpg">
+                    <img src="photos/eu3.jpg">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="photos/eu4.jpg">
+                    <img src="photos/eu4.jpg">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-12">
+                <a class="lightbox" href="photos/eu5.jpg">
+                    <img src="photos/eu5.jpg">
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container gallery-container">
     <h1 class="amatic">Singapore, malaysia, Thailand</h1>
     <h2 class="amatic text-center">2013</h2>
     <div class="tz-gallery">
