--- a/fmning/projects/index.html
+++ b/fmning/projects/index.html
@@ -13,15 +13,77 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container short_pad_top">
     <p class=" amatic uppercase center75text">Projects</p>
 </div>
 
-<div class="container">
+<div class="container short_pad_top">
     <h3 class="raleway">WPI CSA, iOS and Android App written for Chinese Student Association of WPI</h3>
-    <p class="lead">Supports a forum that can be used to host events, trade and post feeds. Integrated Braintree for ticket charging service. Presents the book Survival Guide for Chinese Students using html and SQLite.The server side uses Java Restful and Spring MVC. This app is published on both <a target="_blank" href="https://itunes.apple.com/us/app/wpi-csa/id1262827754?mt=8">App Store</a> and <a target="_blank" href="https://play.google.com/store/apps/details?id=com.fmning.wpi_csa">Google Play Store</a>. The web version can be found <a target="_blank" href="https://wcservice.fmning.com">here</a></p>
+    <p class="lead">Supports a forum that can be used to host events, trade and post feeds. Integrated Braintree for ticket charging service. Presents the book Survival Guide for Chinese Students using html and SQLite.The server side uses Java Restful and Spring MVC. This app is published on both <a target="_blank" href="https://itunes.apple.com/us/app/wpi-csa/id1262827754?mt=8">App Store</a> and <a target="_blank" href="https://play.google.com/store/apps/details?id=com.fmning.wpi_csa">Google Play Store</a>. The app supports the off-line version of Survival Guide and can be updated from server. The app talks to server through HTTP requests. The web version can be found <a target="_blank" href="https://wcservice.fmning.com">here</a></p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Java</span>&emsp;<span class="badge badge-secondary">JavaScript</span>&emsp;<span class="badge badge-secondary">Spring Framework</span>&emsp;<span class="badge badge-secondary">MVC</span>&emsp;<span class="badge badge-secondary">Java ORM</span>&emsp;<span class="badge badge-secondary">Swift</span>&emsp;<span class="badge badge-secondary">Java for Android</span>&emsp;<span class="badge badge-secondary">Postgresql</span>&emsp;<span class="badge badge-secondary">SQLite</span></p>
+	<div class="row">
+		<div class="col-sm-12 col-md-6">
+			<img class="fit-width" src="photos/csa1.jpg">
+		</div>
+		<div class="col-sm-6 col-md-3">
+			<img class="fit-width" src="photos/csa2.jpg">
+		</div>
+		<div class="col-sm-6 col-md-3">
+			<img class="fit-width" src="photos/csa3.png">
+		</div>
+	</div>
 </div>
 
+<div class="container">
+    <h3 class="raleway">Project Ning. Social app that replicates WeChat</h3>
+    <p class="lead">Social app with friend search, chat and moment functions. Similar to apps like Wechat or Timber. Created Java service using spring framework and ORM implementation. This is also the base module for WPI CSA project. iOS app is created which talks to server by HTTP requests. <a target="_blank" href="../projNing/">Here is the main page</a> for this project.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Java</span>&emsp;<span class="badge badge-secondary">Spring Framework</span>&emsp;<span class="badge badge-secondary">Java ORM</span>&emsp;<span class="badge badge-secondary">Objective-C</span>&emsp;<span class="badge badge-secondary">Postgresql</span></p>
+	<p class="lead">GitHub Links:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ProjectNingServer">Server code</a><br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ProjectNingIOS">iOS client code</a></p>
+</div>
+
+<div class="container">
+    <h3 class="raleway">Lopop. Mobile app to connect local buyer and seller for trading stuffs</h3>
+    <p class="lead">Lopop is a location-based marketplace app that aims to help students deal with they used items. It has a similar UI as amazon or eBay. The difference is that buyers are able to chat with seller directly though in-app chatting or whatever methods they want. They will also discuss and come up with an agreement about the price, how or where to trade etc.</p>
+	<p class="lead">I was developing this together with my college friend <a target="_blank" href="https://github.com/troyling">Troy Ling</a>. However we had to stop the project in late 2015 because the server we where using, Parse, stopped its service and transformed to an open source software, and we cannot host the server. Also, Facebook redesigned its Marketplace in late 2016 that allows the same thing that we are creating, with all its existing users.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Java for Android</span>&emsp;<span class="badge badge-secondary">Parse</span>&emsp;<span class="badge badge-secondary">Firebase</span></p>
+	<p class="lead">Demo video:<br>&emsp;&emsp;&emsp;&emsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/NbFoPrfzK1g?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+
+<div class="container">
+    <h3 class="raleway">Online contact book - college project</h3>
+    <p class="lead">My first responsive website created as the final project of Webware course in WPI. It's written by ruby with a postgres database handling data. It has complete processes for log in, register, save & retrieve contacts, etc. I also created all the UI elements by myself without using any libraries. The site is hosted on Heroku and here is the link for the live demo.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Ruby on Rails</span>&emsp;<span class="badge badge-secondary">Postgres sql</span></p>
+	<p class="lead">GitHub Links:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ArchivedProjects/tree/master/OnlineAddressBook">https://github.com/DerekFangming/ArchivedProjects/tree/master/OnlineAddressBook</a></p>
+	<p class="lead">Demo site:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://whispering-sands-4704.herokuapp.com/">https://whispering-sands-4704.herokuapp.com/</a><br>&emsp;&emsp;&emsp;&emsp;Using username 123 and password 1 or create an account</p>
+</div>
+
+<div class="container">
+    <h3 class="raleway">WPI SG</h3>
+    <p class="lead">Created by Adobe Flash Builder with Flex. It has all the text content of the book Survival Guide for WPI CSA. Contents are stored in SQLite database. This is also the prototype & inspiration for the WPI CSA app which is created later.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Flex</span>&emsp;<span class="badge badge-secondary">Adobe Flash Builder</span>&emsp;<span class="badge badge-secondary">SQLite</span></p>
+	<p class="lead">GitHub Links:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ArchivedProjects/tree/master/WPI_SG_App">https://github.com/DerekFangming/ArchivedProjects/tree/master/WPI_SG_App</a></p>
+	<p class="lead">Demo video:<br>&emsp;&emsp;&emsp;&emsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/b_zJWChqaXE?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+
+<div class="container">
+    <h3 class="raleway">Notebook app</h3>
+    <p class="lead">Created by Adobe Flash Builder with Flex. The first time that I am creating apps with a database. It's acting the same as Notes app on iOS with basic functions like read or save a note. It does not support images or search.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Flex</span>&emsp;<span class="badge badge-secondary">Adobe Flash Builder</span>&emsp;<span class="badge badge-secondary">SQLite</span></p>
+	<p class="lead">GitHub Links:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ArchivedProjects/tree/master/NotebookApp">https://github.com/DerekFangming/ArchivedProjects/tree/master/NotebookApp</a></p>
+	<p class="lead">Demo video:<br>&emsp;&emsp;&emsp;&emsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/WxSJ7va6MNg?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+
+<div class="container">
+    <h3 class="raleway">Homeland resource app</h3>
+    <p class="lead">The first app I created that runs on an actual device. It's created by Adobe Flash Builder with programming language called Flex. It's similar with creating xml for UI and JavaScript for functionalities. The app uses ArcGIS SDK to load maps, land resources and related stuffs.</p>
+	<p class="lead">Programming:<br>&emsp;&emsp;&emsp;&emsp;<span class="badge badge-secondary">Flex</span>&emsp;<span class="badge badge-secondary">Adobe Flash Builder</span>&emsp;<span class="badge badge-secondary">ArcGIS</span></p>
+	<p class="lead">GitHub Links:<br>&emsp;&emsp;&emsp;&emsp;<a target="_blank" href="https://github.com/DerekFangming/ArchivedProjects/tree/master/HomelandResourceApp">https://github.com/DerekFangming/ArchivedProjects/tree/master/HomelandResourceApp</a></p>
+	<p class="lead">Demo video:<br>&emsp;&emsp;&emsp;&emsp;<iframe width="560" height="315" src="https://www.youtube.com/embed/7vBVbMMkfXU?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
+</div>
+
+<div class="container">
+    <h3 class="amatic  text-center">Copyright &#169 2018 Fangming Ning.</h3>
+</div>
 
 </body>
-</html>
+</html>https://www.youtube.com/channel/UCq0imsn84ShAe9PBOFnoIrg
