--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script>
+			function checkRedirect() {
+				if (window.location.href == 'https://sso.fmning.com/') {
+					window.location.href = 'https://sso.fmning.com/authentication/';
+				}
+			}
+			
+			window.onload = checkRedirect;
+		</script>
 	</head>
 	<body>
 		<section id="title-slide" class="clearfix" data-stellar-background-ratio="0.5" >
