--- a/index.html
+++ b/index.html
@@ -1070,24 +1070,21 @@
 									$('#submitBtn').prop('disabled', true);
 									$.ajax({
 										type: "POST",
-										url: "http://postman.fmning.com/api/notification",
-										data: JSON.stringify({"subject": "New message from fmning.com", "content" : content}),
+										url: "https://www.fmning.com/tools/api/email/send",
+										data: JSON.stringify({"subject": "New message", "content" : content, "senderType": "SEND_IN_BLUE"}),
 										contentType: "application/json",
 										dataType: "json",
 										success: function (data) {
-											if (data['error'] != '') {
-												alert('Something went wrong. Please contact admin@fmning.com '+data['error']);
-											} else {
-												$('#nameField').val('');
-												$('#emailField').val('');
-												$('#contentField').val('');
-												alert('Sent');
-												$('#submitBtn').prop('disabled', false);
-											}
+											console.log(data);
+											$('#nameField').val('');
+											$('#emailField').val('');
+											$('#contentField').val('');
+											alert('Sent');
+											$('#submitBtn').prop('disabled', false);
 											return false;
 										},
 										error: function (xhr, textStatus, errorThrown) {
-											alert('Something went wrong. Please contact admin@fmning.com');
+											alert('Something went wrong. Please contact admin@fmning.com directly.');
 											console.log(xhr);
 											console.log(textStatus);
 											console.log(errorThrown);
