--- a/ktv/index.html
+++ b/ktv/index.html
@@ -51,7 +51,7 @@
           contentType: "application/json; charset=utf-8",
           dataType:'json',
           success: function(data) {
-            alert('Requested');
+            alert('Requested: ' + keyword.trim());
           },
           error: function(xhr, textStatus) {
             alert(xhr.responseJSON.message);
